# JobSpy

./: .gitignore  BUG_REPORT.md  CLAUDE.md  jobspy.md  test_bugs.py
job-intelligence/: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
job-intelligence/.claude/: launch.json
job-intelligence/ai/: __init__.py  resume_docx.py  resume_rebuilder.py
job-intelligence/alembic/: env.py
job-intelligence/analytics/: __init__.py  ai.py  engine.py
job-intelligence/api/: __init__.py  main.py  schemas.py  services.py
job-intelligence/backups/: job_intelligence_20260618_014442.db-journal  job_intelligence_20260618_044515.db-journal  job_intelligence_20260618_051512.db-journal  job_intelligence_20260618_064523.db-journal  job_intelligence_20260618_071515.db-journal  job_intelligence_20260618_081519.db-journal  job_intelligence_20260618_084524.db-journal  job_intelligence_20260618_111520.db-journal
job-intelligence/collectors/: __init__.py  adzuna_collector.py  ats_career_collector.py  base.py  careerbuilder_collector.py  company_pages.py  company_targets.py  dedup.py  governmentjobs_collector.py  jobspy_collector.py  markdown_job_collector.py  query_templates.py  remotely_collector.py  remoteok_collector.py  simple_web_job_collector.py  usajobs_collector.py  weworkremotely_collector.py
job-intelligence/dashboard/: app.py
job-intelligence/data/: company_targets.json  h1b_company_targets.json
job-intelligence/docker/: Dockerfile  Dockerfile.api  Dockerfile.frontend  nginx.conf
job-intelligence/docs/: api.md  (+2 more)
(+111 files in other folders)
